--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "better-npm-run start:dev",
+    "dev": "better-npm-run start:dev",
     "start:prod": "better-npm-run start:prod",
     "build": "better-npm-run build",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw .",
     "lint:watch": "npm run lint -- --watch",
-    "clean": "rimraf src/public/*"
+    "clean": "rimraf src/public/* dist",
+    "release:copy": "shx mkdir -p dist/$npm_package_name && shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name",
+    "release:deps": "cd dist/$npm_package_name && npm i --production",
+    "release:package": "cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name",
+    "release": "npm-run-all clean build release:copy release:deps release:package"
   },
   "betterScripts": {
     "start:dev": {
-      "command": "nodemon index.js",
+      "command": "nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
       "env": {
         "NODE_ENV": "development"
       }
@@ -72,6 +76,7 @@
     "pre-commit": "^1.2.2",
     "resolve-path": "^1.3.3",
     "sass-loader": "^6.0.6",
+    "shx": "^0.2.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
