--- a/package.json
+++ b/package.json
@@ -42,21 +42,25 @@
   "author": "chenbin92",
   "license": "ISC",
   "dependencies": {
+    "echarts": "^3.7.1",
     "jquery": "^3.2.1",
     "koa": "^2.3.0",
     "koa-ejs": "^4.1.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^7.1.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "better-npm-run": "0.0.15",
     "chalk": "^1.1.3",
+    "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
