--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "open-browser-webpack-plugin": "0.0.5",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pre-commit": "^1.2.2",
     "resolve-path": "^1.3.3",
     "sass-loader": "^6.0.6",
