--- a/package.json
+++ b/package.json
@@ -50,14 +50,13 @@
     "koa-static": "^4.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "supervisor": "^0.12.0"
+    "babel-preset-env": "^1.5.2",
+    "babel-register": "^6.24.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^7.1.0",
-    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
     "better-npm-run": "0.0.15",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
@@ -72,7 +71,6 @@
     "html-webpack-plugin": "^2.28.0",
     "koa-webpack-dev-middleware": "^2.0.0",
     "koa-webpack-middleware": "^1.0.5",
-    "mz": "^2.6.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
