--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "better-npm-run build",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw .",
+    "test": "mocha --compilers js:babel-register --timeout 3500",
     "lint:watch": "npm run lint -- --watch",
     "clean": "rimraf src/public/* dist",
     "release:copy": "shx mkdir -p dist/$npm_package_name && shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name",
@@ -42,8 +43,6 @@
   "author": "chenbin92",
   "license": "ISC",
   "dependencies": {
-    "echarts": "^3.7.1",
-    "jquery": "^3.2.1",
     "koa": "^2.3.0",
     "koa-ejs": "^4.1.0",
     "koa-router": "^7.2.1",
@@ -62,6 +61,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "echarts": "^3.7.1",
     "eslint": "^4.1.1",
     "eslint-config-egg": "^4.2.1",
     "eslint-watch": "^3.1.2",
@@ -69,8 +69,10 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "koa-webpack-dev-middleware": "^2.0.0",
     "koa-webpack-middleware": "^1.0.5",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
@@ -79,8 +81,10 @@
     "pre-commit": "^1.2.2",
     "resolve-path": "^1.3.3",
     "sass-loader": "^6.0.6",
+    "should": "^13.1.0",
     "shx": "^0.2.2",
     "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
