--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "eslint-watch": "^3.1.2",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
@@ -86,6 +88,7 @@
     "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "url-loader": "^0.5.9",
+    "vue-loader": "^13.0.5",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.12.0"
