--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
   "author": "chenbin92",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-env": "^1.5.2",
+    "babel-register": "^6.24.1",
     "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-ejs": "^4.1.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.24.1"
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
