--- a/package.json
+++ b/package.json
@@ -40,12 +40,11 @@
   "pre-commit": [
     "lint"
   ],
-  "author": "chenbin92",
+  "author": "chenbin92 travisxu",
   "license": "ISC",
   "dependencies": {
     "babel-preset-env": "^1.5.2",
     "babel-register": "^6.24.1",
-    "cross-env": "^5.0.5",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-ejs": "^4.1.0",
@@ -60,6 +59,7 @@
     "babel-preset-es2015": "^6.24.1",
     "better-npm-run": "0.0.15",
     "chalk": "^1.1.3",
+    "cross-env": "^5.0.5",
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
