--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "better-npm-run build",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw .",
-    "test": "mocha --compilers js:babel-register --timeout 3500",
+    "test": "nyc mocha --compilers js:babel-register --timeout 3500",
+    "test:cover": "nyc --reporter=html npm test",
     "lint:watch": "npm run lint -- --watch",
     "clean": "rimraf src/public/* dist",
     "release:copy": "cross-env-shell shx mkdir -p dist/$npm_package_name && cross-env-shell shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name",
@@ -59,9 +60,9 @@
     "babel-preset-es2015": "^6.24.1",
     "better-npm-run": "0.0.15",
     "chalk": "^1.1.3",
-    "cross-env": "^5.0.5",
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "echarts": "^3.7.1",
     "eslint": "^4.1.1",
@@ -80,6 +81,7 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
+    "nyc": "^11.2.1",
     "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pre-commit": "^1.2.2",
