Add stylelint support

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "better-npm-run start:prod",
     "build": "better-npm-run build",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
-    "lint": "esw .",
+    "lint": "esw . && stylelint **/*.scss",
     "test": "nyc mocha --compilers js:babel-register --timeout 3500",
     "test:cover": "nyc --reporter=html npm test",
     "lint:watch": "npm run lint -- --watch",
@@ -90,6 +90,9 @@
     "should": "^13.1.0",
     "shx": "^0.2.2",
     "style-loader": "^0.18.2",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-order": "^0.7.0",
     "supertest": "^3.0.0",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.5",
