--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "test:cover": "nyc --reporter=html npm test",
     "lint:watch": "npm run lint -- --watch",
     "clean": "rimraf src/public/* dist",
-    "release:copy": "cross-env-shell shx mkdir -p dist/$npm_package_name && cross-env-shell shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name",
-    "release:deps": "cross-env-shell cd dist/$npm_package_name && npm i --production",
-    "release:package": "cd dist && cross-env-shell tar -zcvf $npm_package_name.tar.gz $npm_package_name",
+    "release:copy": "cross-env-shell \"shx mkdir -p dist/$npm_package_name && shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name\" ",
+    "release:deps": "cross-env-shell \"cd dist/$npm_package_name && npm i --production\" ",
+    "release:package": "cross-env-shell \"cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" ",
     "release": "npm-run-all clean build release:copy release:deps release:package"
   },
   "betterScripts": {
