--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "better-npm-run start:dev",
-    "start:prod": "better-npm-run start:prod",
-    "build": "better-npm-run build",
+    "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
+    "start:prod": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
+    "build": "cross-env NODE_ENV=production npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw . && stylelint **/*.scss",
     "test": "nyc mocha --compilers js:babel-register --timeout 3500",
@@ -17,26 +17,6 @@
     "release:deps": "cross-env-shell \"cd dist/$npm_package_name && npm i --production\" ",
     "release:package": "cross-env-shell \"cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" ",
     "release": "npm-run-all clean build release:copy release:deps release:package"
-  },
-  "betterScripts": {
-    "start:dev": {
-      "command": "nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "start:prod": {
-      "command": "npm run build && node index.js",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "build": {
-      "command": "npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    }
   },
   "pre-commit": [
     "lint"
@@ -58,7 +38,6 @@
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
-    "better-npm-run": "0.0.15",
     "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
