--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
-    "start:prod": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
+    "start": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
     "build": "cross-env NODE_ENV=production npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js",
     "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw . && stylelint **/*.scss",
