--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "koa2-boilerplate",
+  "name": "web",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
     "start": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
     "build": "cross-env NODE_ENV=production npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js",
-    "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "lint": "esw . && stylelint **/*.scss",
     "test": "nyc mocha --compilers js:babel-register --timeout 3500",
-    "test:cover": "nyc --reporter=html npm test",
-    "lint:watch": "npm run lint -- --watch",
+    "release": "npm-run-all clean build release:copy release:deps release:package",
     "clean": "rimraf src/public/* dist",
+    "lint:watch": "npm run lint -- --watch",
+    "test:cover": "nyc --reporter=html npm test",
+    "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
     "release:copy": "cross-env-shell \"shx mkdir -p dist/$npm_package_name && shx cp -r src/ build/ *.js *.json .babelrc dist/$npm_package_name\" ",
     "release:deps": "cross-env-shell \"cd dist/$npm_package_name && npm i --production\" ",
-    "release:package": "cross-env-shell \"cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" ",
-    "release": "npm-run-all clean build release:copy release:deps release:package"
+    "release:package": "cross-env-shell \"cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" "
   },
   "pre-commit": [
     "lint"
