--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
     "start": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
-    "build": "cross-env NODE_ENV=production npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js",
+    "build": "cross-env-shell NODE_ENV=production \"npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js\"",
     "lint": "esw . && stylelint **/*.scss",
     "test": "nyc mocha --compilers js:babel-register --timeout 3500",
     "release": "npm-run-all clean build release:copy release:deps release:package",
