--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "web",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=6.3",
+    "npm": ">=3.10"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
     "start": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
     "build": "cross-env-shell NODE_ENV=production \"npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js\"",
     "lint": "esw . && stylelint **/*.scss",
-    "test": "nyc mocha --compilers js:babel-register --timeout 3500",
+    "test": "nyc mocha --compilers js:babel-register --require babel-polyfill --timeout 3500",
     "release": "npm-run-all clean build release:copy release:deps release:package",
     "clean": "rimraf src/public/* dist",
     "lint:watch": "npm run lint -- --watch",
@@ -21,9 +26,9 @@
     "lint"
   ],
   "author": "chenbin92 travisxu",
-  "license": "ISC",
   "dependencies": {
     "babel-preset-env": "^1.5.2",
+    "babel-polyfill": "^6.26.0",
     "babel-register": "^6.24.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -36,21 +41,18 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
-    "echarts": "^3.7.1",
     "eslint": "^4.1.1",
     "eslint-config-egg": "^4.2.1",
     "eslint-watch": "^3.1.2",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
-    "font-awesome": "^4.7.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
