--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "shx": "^0.2.2",
     "style-loader": "^0.18.2",
     "stylelint": "^8.2.0",
-    "stylelint-config-standard": "^17.0.0",
+    "stylelint-config-recommended-scss": "^2.0.0",
     "stylelint-order": "^0.7.0",
+    "stylelint-scss": "^2.1.0",
     "supertest": "^3.0.0",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.5",
