--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
