--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --ignore src/assets/ --ignore src/public --ignore dist/ index.js",
-    "start": "cross-env-shell NODE_ENV=production \"npm run build && node index.js\"",
-    "build": "cross-env-shell NODE_ENV=production \"npm-run-all --parallel clean lint && webpack --colors --display-error-details --config build/webpack.config.js\"",
-    "lint": "esw . && stylelint **/*.scss",
+    "dev": "cross-env NODE_ENV=development nodemon --watch src/ --exec babel-node src/server.js",
+    "start": "cross-env-shell NODE_ENV=production \"npm run build && node dist/server.js\"",
+    "lint": "eslint . && stylelint **/*.scss",
     "test": "nyc mocha --compilers js:babel-register --require babel-polyfill --timeout 3500",
+    "build": "npm-run-all clean --parallel build:*",
     "release": "npm-run-all clean build release:copy release:deps release:package",
-    "clean": "rimraf src/public/static dist",
+    "clean": "rimraf src/public/static dist build release",
     "prettier": "prettier */**/*.js --write && git add . && git status",
-    "lint:watch": "npm run lint -- --watch",
+    "build:client": "cross-env NODE_ENV=production webpack --colors --display-error-details --config config/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=production webpack --colors --display-error-details --config config/webpack.config.server.js",
     "test:cover": "nyc --reporter=html npm test",
-    "watch:assets": "npm run clean && webpack --watch --colors --display-error-details --config build/webpack.config.js",
-    "release:copy": "cross-env-shell \"shx mkdir -p dist/$npm_package_name && shx cp -r src/ *.js *.json .babelrc dist/$npm_package_name\" ",
-    "release:deps": "cross-env-shell \"cd dist/$npm_package_name && npm i --production\" ",
-    "release:package": "cross-env-shell \"cd dist && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" "
+    "release:copy": "cross-env-shell \"shx mkdir -p release/$npm_package_name && shx cp -r dist/ public/  *.json release/$npm_package_name\" ",
+    "release:deps": "cross-env-shell \"cd release/$npm_package_name && npm i --production\" ",
+    "release:package": "cross-env-shell \"cd release/ && tar -zcvf $npm_package_name.tar.gz $npm_package_name\" "
   },
   "pre-commit": [
     "prettier",
@@ -29,9 +29,6 @@
   ],
   "author": "chenbin92 travisxu",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.24.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-ejs": "^4.1.0",
@@ -42,9 +39,13 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
@@ -86,6 +87,7 @@
     "vue-loader": "^13.0.5",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-dev-middleware": "^1.12.0"
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
