Update entry point

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=6.3",
     "npm": ">=3.10"
   },
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch src/ --exec babel-node src/server.js",
     "start": "cross-env-shell NODE_ENV=production \"npm run build && node dist/server.js\"",
