--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test": "nyc mocha --compilers js:babel-register --require babel-polyfill --timeout 3500",
     "build": "npm-run-all clean --parallel build:*",
     "release": "npm-run-all clean build release:copy release:deps release:package",
-    "clean": "rimraf src/public/static dist build release",
+    "clean": "rimraf public/static dist build release",
     "prettier": "prettier */**/*.js --write && git add . && git status",
-    "build:client": "cross-env NODE_ENV=production webpack --colors --display-error-details --config config/webpack.config.client.js",
-    "build:server": "cross-env NODE_ENV=production webpack --colors --display-error-details --config config/webpack.config.server.js",
+    "build:client": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.server.js",
     "test:cover": "nyc --reporter=html npm test",
     "release:copy": "cross-env-shell \"shx mkdir -p release/$npm_package_name && shx cp -r dist/ public/  *.json release/$npm_package_name\" ",
     "release:deps": "cross-env-shell \"cd release/$npm_package_name && npm i --production\" ",
@@ -35,7 +35,8 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "source-map-support": "^0.5.2"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
