Update vue related config

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm-run-all clean --parallel build:*",
     "release": "npm-run-all clean build release:copy release:deps release:package",
     "clean": "rimraf public/static dist build release",
-    "prettier": "prettier */**/*.js --write && git add . && git status",
+    "prettier": "prettier */**/*.js --write && git add --force && git status",
     "build:client": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.server.js",
     "test:cover": "nyc --reporter=html npm test",
@@ -85,7 +85,8 @@
     "stylelint-scss": "^2.1.0",
     "supertest": "^3.0.0",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.12.0",
