--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-loader": "^7.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
@@ -53,7 +54,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
-    "eslint": "^4.1.1",
+    "eslint": "^4.16.0",
     "eslint-config-egg": "^4.2.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-watch": "^3.1.2",
