Cache the assets manifest when server startup

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf public/static dist build release",
     "prettier": "prettier */**/*.js --write && git add --force && git status",
     "dev:client": "nodemon --watch config/webpack.config.js -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config config/webpack.config.client.js",
-    "dev:server": "cross-env DEBUG=app:* NODE_ENV=development nodemon --watch src/ --ignore src/assets --exec babel-node src/server.js",
+    "dev:server": "cross-env DEBUG=app:* nodemon --watch src/ --ignore src/assets --exec babel-node src/server.js",
     "build:client": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=production webpack --colors --config config/webpack.config.server.js",
     "test:cover": "nyc --reporter=html npm test",
