--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
-    "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "compression-webpack-plugin": "^1.0.0",
     "concurrently": "^3.5.1",
@@ -68,9 +67,11 @@
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "koa-proxies": "^0.6.2",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "mocha": "^3.5.3",
-    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "normalize.css": "^7.0.0",
     "npm-run-all": "^4.0.2",
     "nyc": "^11.2.1",
     "open-browser-webpack-plugin": "0.0.5",
@@ -78,7 +79,6 @@
     "pre-commit": "^1.2.2",
     "prettier": "1.9.2",
     "resolve-path": "^1.3.3",
-    "sass-loader": "^6.0.6",
     "should": "^13.1.0",
     "shx": "^0.2.2",
     "style-loader": "^0.18.2",
