Update README and stylelint config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "concurrently -k \"npm run dev:client\" \"npm run dev:server\"",
     "start": "cross-env-shell NODE_ENV=production \"npm run build && node dist/server.js\"",
-    "lint": "eslint . && stylelint **/*.scss",
+    "lint": "eslint . && stylelint **/*.less",
     "test": "nyc mocha",
     "build": "npm-run-all clean --parallel build:*",
     "release": "npm-run-all clean build release:copy release:deps release:package",
@@ -83,9 +83,8 @@
     "shx": "^0.2.2",
     "style-loader": "^0.18.2",
     "stylelint": "^8.2.0",
-    "stylelint-config-recommended-scss": "^2.0.0",
+    "stylelint-config-standard": "^18.0.0",
     "stylelint-order": "^0.7.0",
-    "stylelint-scss": "^2.1.0",
     "supertest": "^3.0.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.7.0",
