--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     ">1%",
     "last 4 versions",
     "Firefox ESR",
-    "not ie < 9"
+    "not ie < 9",
+    "iOS >= 8",
+    "Android >= 4"
   ],
   "main": "dist/server.js",
   "scripts": {
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^8.1.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.0",
@@ -102,6 +105,7 @@
     "nyc": "^11.2.1",
     "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.1",
     "pre-commit": "^1.2.2",
     "prettier": "1.9.2",
     "prettier-eslint": "^8.8.1",
