--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iOS >= 8",
     "Android >= 4"
   ],
+  "path":"/",
   "main": "dist/server.js",
   "scripts": {
     "dev": "concurrently -k \"npm run dev:client\" \"npm run dev:server\"",
@@ -63,6 +64,7 @@
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-ejs": "^4.1.0",
+    "koa-mount": "^3.0.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.0",
     "lodash": "^4.17.4",
